tests/cases/fail/test_generic_struct_construct_noargs.nr
//@ error: constructing generic struct 'Option' needs type arguments
// A generic struct constructed without a turbofish has no way to bind its type
// params (no context inference yet), so it is rejected asking for the args.

struct Option<T> { present: bool, value: T }

@export
proc main() i32 {
    let o: bool = Option { present: true, value: 5 }.present;
    return 0;
}
